# notes-tui

./: .gitignore  Cargo.toml  Makefile  README.md  config.mk  rustfmt.toml
src/: construct.rs  consts.rs  helpers.rs  main.rs  note.rs  state.rs
