[package]
name = "notes-tui"
version = "0.1.0"
keywords = ["tui", "notes"]
description = "A simple, unoptimized note test application."
license-file = "LICENSE"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5"
tui = "0.15"
